--- a/TFM_Clean.ipynb
+++ b/TFM_Clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,12 +17,15 @@
     "from gymnasium import Env\n",
     "from gymnasium.spaces import Box\n",
     "import copy\n",
-    "import json"
+    "import json\n",
+    "import pyarrow as pa\n",
+    "import pyarrow.parquet as pq\n",
+    "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "class Architecture:\n",
@@ -67,6 +70,7 @@
     "        self.data_allocation_dict = []\n",
     "\n",
     "        self.action_type = []\n",
+    "        self.action_device_dev = []\n",
     "        self.action_device = []\n",
     "\n",
     "        randomized = list(self.devices.keys())\n",
@@ -188,7 +192,7 @@
     "    def compute_total_latency(self):\n",
     "        total_latency = 0\n",
     "        for i in range(len(self.action_type)):\n",
-    "            total_latency += sum([a*b for a,b in zip(self.data[self.action_type[i]].values(), self.latencies[self.action_device[i]].values())])\n",
+    "            total_latency += sum([a*b for a,b in zip(self.data[self.action_type[i]].values(), self.latencies[self.action_device_dev[i]].values())])\n",
     "        return total_latency\n",
     "\n",
     "    def generate(self, operation):\n",
@@ -201,11 +205,13 @@
     "                    self.update('mc',i)\n",
     "        elif operation.split('_')[0] == 'ai':\n",
     "            device=random.sample(list(self.clusters[operation.split('_')[1]]),1)\n",
-    "            self.action_device.append(device[0])\n",
+    "            self.action_device_dev.append(device[0])\n",
+    "            self.action_device.append(self.to_int(device[0]))\n",
     "            self.action_type.append(operation.split('_')[1])\n",
-    "            difference = len(self.action_device) - self.max_actions\n",
+    "            difference = len(self.action_device_dev) - self.max_actions\n",
     "            if difference >= 0:\n",
     "                for i in range(difference):\n",
+    "                    self.action_device_dev.pop(0)\n",
     "                    self.action_device.pop(0)\n",
     "                    self.action_type.pop(0)\n",
     "\n",
@@ -238,17 +244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([0, 3, 5, 7, 0], dtype=int16)"
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 3,
+   "outputs": [],
    "source": [
     "class SimulatedArchitecture(Env):\n",
     "    def __init__(self, architecture, num_devices):\n",
@@ -302,13 +299,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "def getData():\n",
+    "    observations_file_path = 'TFM/observations.csv'\n",
+    "    next_observations_file_path = 'TFM/next_observations.csv'\n",
+    "    actions_file_path = 'TFM/actions.parquet'\n",
+    "    rewards_file_path = 'TFM/rewards.parquet'\n",
+    "\n",
+    "    observations_pd = pd.read_csv(observations_file_path)\n",
+    "    observations = observations_pd.to_dict(orient='records')\n",
+    "    next_observations_pd = pd.read_csv(next_observations_file_path)\n",
+    "    next_observations = next_observations_pd.to_dict(orient='records')\n",
+    "    actions_table = pq.read_table(actions_file_path)\n",
+    "    rewards_table = pq.read_table(rewards_file_path)\n",
+    "    actions = np.array(actions_table.to_pandas())\n",
+    "    rewards = np.array(rewards_table.to_pandas())\n",
+    "\n",
+    "    return {\"observations\": observations, \"actions\":actions, \"rewards\": rewards, \"next_observations\":next_observations}\n",
+    "\n",
+    "def processing(dataset):\n",
+    "    for i in range(len(dataset)):\n",
+    "        offline_dataset['observations'][i][\"weights\"] = ast.literal_eval(offline_dataset['observations'][i][\"weights\"])\n",
+    "        offline_dataset['observations'][i][\"free_space\"] = ast.literal_eval(offline_dataset['observations'][i][\"free_space\"])\n",
+    "        offline_dataset['observations'][i]['allocation'] = ast.literal_eval(offline_dataset['observations'][i]['allocation'])\n",
+    "        offline_dataset['observations'][i][\"last_calls\"] = ast.literal_eval(offline_dataset['observations'][i][\"last_calls\"])\n",
+    "        offline_dataset['next_observations'][i][\"weights\"] = ast.literal_eval(offline_dataset['next_observations'][i][\"weights\"])\n",
+    "        offline_dataset['next_observations'][i][\"free_space\"] = ast.literal_eval(offline_dataset['next_observations'][i][\"free_space\"])\n",
+    "        offline_dataset['next_observations'][i]['allocation'] = ast.literal_eval(offline_dataset['next_observations'][i]['allocation'])\n",
+    "        offline_dataset['next_observations'][i][\"last_calls\"] = ast.literal_eval(offline_dataset['next_observations'][i][\"last_calls\"])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "file_path = 'TFM/offline_dataset.json'\n",
-    "\n",
-    "with open(file_path) as json_file:\n",
-    "    offline_dataset = json.load(json_file)"
+    "offline_dataset = getData()\n",
+    "len(offline_dataset)"
    ],
    "metadata": {
     "collapsed": false,
@@ -319,9 +351,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "outputs": [],
-   "source": [],
+   "source": [
+    "processing(offline_dataset)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 63000/63000 [02:46<00:00, 378.11it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "                                                      c0   \n0                                                    1.0  \\\n1                                                    1.0   \n2                                               0.999995   \n3                                               0.999996   \n4      [0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...   \n...                                                  ...   \n62995  [0.901356, 0.8685, 0.2242, 0.5173749999999999,...   \n62996  [0.903366, 0.8644375, 0.23579999999999998, 0.5...   \n62997  [0.8984985000000001, 0.86765, 0.24060000000000...   \n62998  [0.904021, 0.8651, 0.23200000000000004, 0.5156...   \n62999  [0.8997200000000001, 0.869625, 0.2229999999999...   \n\n                                                      c1   \n0                                                    1.0  \\\n1                                                    1.0   \n2                                               0.999997   \n3                                               0.999996   \n4      [0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...   \n...                                                  ...   \n62995  [0.901356, 0.8685, 0.2242, 0.5173749999999999,...   \n62996  [0.903366, 0.8644375, 0.23579999999999998, 0.5...   \n62997  [0.8984985000000001, 0.86765, 0.24060000000000...   \n62998  [0.904021, 0.8651, 0.23200000000000004, 0.5156...   \n62999  [0.8997200000000001, 0.869625, 0.2229999999999...   \n\n                                                      s0   \n0                                                    1.0  \\\n1                                                    1.0   \n2                                                    1.0   \n3                                                    1.0   \n4      [0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...   \n...                                                  ...   \n62995  [0.901356, 0.8685, 0.2242, 0.5173749999999999,...   \n62996  [0.903366, 0.8644375, 0.23579999999999998, 0.5...   \n62997  [0.8984985000000001, 0.86765, 0.24060000000000...   \n62998  [0.904021, 0.8651, 0.23200000000000004, 0.5156...   \n62999  [0.8997200000000001, 0.869625, 0.2229999999999...   \n\n                                                      s1   \n0                                                    1.0  \\\n1                                                    1.0   \n2                                                    1.0   \n3                                                    1.0   \n4      [0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...   \n...                                                  ...   \n62995  [0.901356, 0.8685, 0.2242, 0.5173749999999999,...   \n62996  [0.903366, 0.8644375, 0.23579999999999998, 0.5...   \n62997  [0.8984985000000001, 0.86765, 0.24060000000000...   \n62998  [0.904021, 0.8651, 0.23200000000000004, 0.5156...   \n62999  [0.8997200000000001, 0.869625, 0.2229999999999...   \n\n                                                      s2   \n0                                                    1.0  \\\n1                                                    1.0   \n2                                                    1.0   \n3                                                  0.997   \n4      [0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...   \n...                                                  ...   \n62995  [0.901356, 0.8685, 0.2242, 0.5173749999999999,...   \n62996  [0.903366, 0.8644375, 0.23579999999999998, 0.5...   \n62997  [0.8984985000000001, 0.86765, 0.24060000000000...   \n62998  [0.904021, 0.8651, 0.23200000000000004, 0.5156...   \n62999  [0.8997200000000001, 0.869625, 0.2229999999999...   \n\n                                                      s3   \n0                                                    1.0  \\\n1                                                 0.9995   \n2                                               0.999375   \n3                                               0.999375   \n4      [0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...   \n...                                                  ...   \n62995  [0.901356, 0.8685, 0.2242, 0.5173749999999999,...   \n62996  [0.903366, 0.8644375, 0.23579999999999998, 0.5...   \n62997  [0.8984985000000001, 0.86765, 0.24060000000000...   \n62998  [0.904021, 0.8651, 0.23200000000000004, 0.5156...   \n62999  [0.8997200000000001, 0.869625, 0.2229999999999...   \n\n                                                      s4   \n0                                                    1.0  \\\n1                                                    1.0   \n2                                                    1.0   \n3                                                  0.997   \n4      [0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...   \n...                                                  ...   \n62995  [0.901356, 0.8685, 0.2242, 0.5173749999999999,...   \n62996  [0.903366, 0.8644375, 0.23579999999999998, 0.5...   \n62997  [0.8984985000000001, 0.86765, 0.24060000000000...   \n62998  [0.904021, 0.8651, 0.23200000000000004, 0.5156...   \n62999  [0.8997200000000001, 0.869625, 0.2229999999999...   \n\n                                                      s5  \n0                                                    1.0  \n1                                                 0.9995  \n2                                               0.999625  \n3                                               0.999625  \n4      [0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...  \n...                                                  ...  \n62995  [0.901356, 0.8685, 0.2242, 0.5173749999999999,...  \n62996  [0.903366, 0.8644375, 0.23579999999999998, 0.5...  \n62997  [0.8984985000000001, 0.86765, 0.24060000000000...  \n62998  [0.904021, 0.8651, 0.23200000000000004, 0.5156...  \n62999  [0.8997200000000001, 0.869625, 0.2229999999999...  \n\n[63000 rows x 8 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>c0</th>\n      <th>c1</th>\n      <th>s0</th>\n      <th>s1</th>\n      <th>s2</th>\n      <th>s3</th>\n      <th>s4</th>\n      <th>s5</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.9995</td>\n      <td>1.0</td>\n      <td>0.9995</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.999995</td>\n      <td>0.999997</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.999375</td>\n      <td>1.0</td>\n      <td>0.999625</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.999996</td>\n      <td>0.999996</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.997</td>\n      <td>0.999375</td>\n      <td>0.997</td>\n      <td>0.999625</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>[0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...</td>\n      <td>[0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...</td>\n      <td>[0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...</td>\n      <td>[0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...</td>\n      <td>[0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...</td>\n      <td>[0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...</td>\n      <td>[0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...</td>\n      <td>[0.999994, 0.999998, 1.0, 1.0, 0.996, 0.999124...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>62995</th>\n      <td>[0.901356, 0.8685, 0.2242, 0.5173749999999999,...</td>\n      <td>[0.901356, 0.8685, 0.2242, 0.5173749999999999,...</td>\n      <td>[0.901356, 0.8685, 0.2242, 0.5173749999999999,...</td>\n      <td>[0.901356, 0.8685, 0.2242, 0.5173749999999999,...</td>\n      <td>[0.901356, 0.8685, 0.2242, 0.5173749999999999,...</td>\n      <td>[0.901356, 0.8685, 0.2242, 0.5173749999999999,...</td>\n      <td>[0.901356, 0.8685, 0.2242, 0.5173749999999999,...</td>\n      <td>[0.901356, 0.8685, 0.2242, 0.5173749999999999,...</td>\n    </tr>\n    <tr>\n      <th>62996</th>\n      <td>[0.903366, 0.8644375, 0.23579999999999998, 0.5...</td>\n      <td>[0.903366, 0.8644375, 0.23579999999999998, 0.5...</td>\n      <td>[0.903366, 0.8644375, 0.23579999999999998, 0.5...</td>\n      <td>[0.903366, 0.8644375, 0.23579999999999998, 0.5...</td>\n      <td>[0.903366, 0.8644375, 0.23579999999999998, 0.5...</td>\n      <td>[0.903366, 0.8644375, 0.23579999999999998, 0.5...</td>\n      <td>[0.903366, 0.8644375, 0.23579999999999998, 0.5...</td>\n      <td>[0.903366, 0.8644375, 0.23579999999999998, 0.5...</td>\n    </tr>\n    <tr>\n      <th>62997</th>\n      <td>[0.8984985000000001, 0.86765, 0.24060000000000...</td>\n      <td>[0.8984985000000001, 0.86765, 0.24060000000000...</td>\n      <td>[0.8984985000000001, 0.86765, 0.24060000000000...</td>\n      <td>[0.8984985000000001, 0.86765, 0.24060000000000...</td>\n      <td>[0.8984985000000001, 0.86765, 0.24060000000000...</td>\n      <td>[0.8984985000000001, 0.86765, 0.24060000000000...</td>\n      <td>[0.8984985000000001, 0.86765, 0.24060000000000...</td>\n      <td>[0.8984985000000001, 0.86765, 0.24060000000000...</td>\n    </tr>\n    <tr>\n      <th>62998</th>\n      <td>[0.904021, 0.8651, 0.23200000000000004, 0.5156...</td>\n      <td>[0.904021, 0.8651, 0.23200000000000004, 0.5156...</td>\n      <td>[0.904021, 0.8651, 0.23200000000000004, 0.5156...</td>\n      <td>[0.904021, 0.8651, 0.23200000000000004, 0.5156...</td>\n      <td>[0.904021, 0.8651, 0.23200000000000004, 0.5156...</td>\n      <td>[0.904021, 0.8651, 0.23200000000000004, 0.5156...</td>\n      <td>[0.904021, 0.8651, 0.23200000000000004, 0.5156...</td>\n      <td>[0.904021, 0.8651, 0.23200000000000004, 0.5156...</td>\n    </tr>\n    <tr>\n      <th>62999</th>\n      <td>[0.8997200000000001, 0.869625, 0.2229999999999...</td>\n      <td>[0.8997200000000001, 0.869625, 0.2229999999999...</td>\n      <td>[0.8997200000000001, 0.869625, 0.2229999999999...</td>\n      <td>[0.8997200000000001, 0.869625, 0.2229999999999...</td>\n      <td>[0.8997200000000001, 0.869625, 0.2229999999999...</td>\n      <td>[0.8997200000000001, 0.869625, 0.2229999999999...</td>\n      <td>[0.8997200000000001, 0.869625, 0.2229999999999...</td>\n      <td>[0.8997200000000001, 0.869625, 0.2229999999999...</td>\n    </tr>\n  </tbody>\n</table>\n<p>63000 rows × 8 columns</p>\n</div>"
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "free_space = pd.DataFrame(columns=['c0','c1','s0','s1','s2','s3','s4','s5'])\n",
+    "for i in tqdm(offline_dataset[\"observations\"]):\n",
+    "    free_space.loc[len(free_space)] = i[\"free_space\"]\n",
+    "free_space"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'[[], []]'"
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "offline_dataset[\"observations\"][4]['last_calls']"
+   ],
    "metadata": {
     "collapsed": false
    }
