--- a/TFM.ipynb
+++ b/TFM.ipynb
@@ -487,6 +487,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(ids)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "outputs": [],
    "source": [
