--- a/TFM_Clean.ipynb
+++ b/TFM_Clean.ipynb
@@ -351,6 +351,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(offline_dataset['rewards'][])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 104,
    "outputs": [],
    "source": [
