--- a/TFM.ipynb
+++ b/TFM.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "class SimulatedArchitecture(Env):\n",
@@ -308,6 +308,7 @@
     "            self.arch.heart_beat()\n",
     "            self.index = self.index + 1 if self.index < self.len_executions-1 else 0\n",
     "        self.allocation = [self.arch.data_types,self.arch.data_allocation]\n",
+    "        print(self.allocation[1])\n",
     "        self.last_calls = [self.arch.action_type,self.arch.action_device]\n",
     "        self.action_space = Box(low=0, high=self.num_devices-1, shape=(len(self.allocation[1]),), dtype=np.int16)\n",
     "    def close(self):\n",
@@ -319,29 +320,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'simulation' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[4], line 6\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# for i in range(1000):\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m#     simulation = SimulatedArchitecture(arch, 8)\u001B[39;00m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;66;03m#     simulation.reset()\u001B[39;00m\n\u001B[1;32m      4\u001B[0m \u001B[38;5;66;03m#     simulation.step(simulation.allocation[1])\u001B[39;00m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;66;03m# simulation = SimulatedArchitecture(arch, 8)\u001B[39;00m\n\u001B[0;32m----> 6\u001B[0m \u001B[43msimulation\u001B[49m\u001B[38;5;241m.\u001B[39mreset()\n\u001B[1;32m      7\u001B[0m simulation\u001B[38;5;241m.\u001B[39mstep(simulation\u001B[38;5;241m.\u001B[39mallocation[\u001B[38;5;241m1\u001B[39m])\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28mlen\u001B[39m(simulation\u001B[38;5;241m.\u001B[39mlast_calls[\u001B[38;5;241m0\u001B[39m])\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'simulation' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 0, 1, 2, 3, 4, 5, 6, 7, 2, 3, 4, 5, 6, 7]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "({'weights': [0.0125, 0.001, 0.02, 0.1],\n  'free_space': [0.9999865,\n   0.9999865,\n   0.998865,\n   0.998865,\n   0.998865,\n   0.998865,\n   0.998865,\n   0.998865],\n  'allocation': [['a1',\n    'a1',\n    'a1',\n    'a1',\n    'a1',\n    'a1',\n    'a1',\n    'a1',\n    'a2',\n    'a2',\n    'a2',\n    'a2',\n    'a2',\n    'a2',\n    'a2',\n    'a2',\n    'mc',\n    'mc',\n    'mc',\n    'mc',\n    'mc',\n    'mc'],\n   [0, 1, 2, 3, 4, 5, 6, 7, 0, 1, 2, 3, 4, 5, 6, 7, 2, 3, 4, 5, 6, 7]],\n  'last_calls': [[], []]},\n 4001008.8297925,\n True,\n {})"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# for i in range(1000):\n",
-    "#     simulation = SimulatedArchitecture(arch, 8)\n",
-    "#     simulation.reset()\n",
-    "#     simulation.step(simulation.allocation[1])\n",
+    "arch = Architecture()\n",
     "simulation = SimulatedArchitecture(arch, 8)\n",
     "simulation.reset()\n",
-    "simulation.step(simulation.allocation[1])\n",
-    "len(simulation.last_calls[0])"
+    "simulation.step(simulation.allocation[1])"
    ],
    "metadata": {
     "collapsed": false
@@ -487,8 +488,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            c0       c1       s0       s1      s2        s3        s4       s5\n",
+      "8242   0.91850  0.91050  0.37440  0.23600  0.1930  0.369600  0.968620  0.96858\n",
+      "21896  0.92730  0.99318  0.19100  0.99659  0.9306  0.915625  0.913375  0.99653\n",
+      "29195  0.91040  0.89862  0.56700  0.96801  0.3788  0.200000  0.238000  0.96951\n",
+      "42880  0.99316  0.99340  0.99675  0.91775  0.2910  0.996530  0.914250  0.19700\n",
+      "50276  0.89478  0.89674  0.96787  0.22325  0.5390  0.969010  0.199750  0.57500\n"
+     ]
+    }
+   ],
    "source": [
     "print(ids)"
    ],
