--- a/TFM_defined_architecture.ipynb
+++ b/TFM_defined_architecture.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "class Architecture:\n",
@@ -34,7 +34,7 @@
     "        self.num_s = 6\n",
     "        self.max_actions = 10\n",
     "        self.min_free_space = 0.2\n",
-    "        self.space_flag = 0\n",
+    "        self.space_flag = -1\n",
     "\n",
     "        self.data_types = []\n",
     "        self.data_allocation = []\n",
@@ -239,7 +239,7 @@
     "                    self.action_type.pop(0)\n",
     "\n",
     "    def greedy_algorithm(self):\n",
-    "        if self.space_flag == 0:\n",
+    "        if self.space_flag == -1:\n",
     "            print(\"It's ok\")\n",
     "            allocation = []\n",
     "            for i in self.data_types:\n",
@@ -255,7 +255,7 @@
     "                    break\n",
     "            for i in range(self.num_c):\n",
     "                self.clusters[problematic_key].append(i)\n",
-    "            self.space_flag = 0\n",
+    "            self.space_flag = -1\n",
     "            self.greedy_algorithm()"
    ],
    "metadata": {
@@ -461,7 +461,7 @@
     "                break\n",
     "\n",
     "        if flag:\n",
-    "            self.reward = -10\n",
+    "            self.reward = -2\n",
     "        else:\n",
     "            w1 = 1\n",
     "            w2 = 1\n",
@@ -661,15 +661,76 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# test_architecture = AcesArchitectureEnv(52)\n",
+    "# test_architecture = AcesArchitectureEnv(52)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "({'weights': array([0.0125, 0.001 , 0.02  , 0.5   ]),\n  'allocation': array([5, 0, 0, 4, 1, 3, 5, 1, 0, 7, 3, 5, 4, 2, 1, 7, 1, 1, 7, 7, 5, 4,\n         3, 1, 2, 4, 2, 6, 6, 5, 0, 6, 6, 2, 2, 1, 0, 2, 6, 0, 2, 4, 4, 7,\n         4, 6, 0, 1, 2, 7, 2, 1], dtype=int32),\n  'data_type': array([3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2,\n         2, 2, 2, 2, 2, 2, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1,\n         2, 2, 2, 2, 2, 2, 2, 2]),\n  'free_space': array([0.96931, 0.97849, 0.946  , 0.49   , 0.7185 , 0.23375, 0.96075,\n         0.738  ]),\n  'last_calls_type': array([3, 0, 1, 2, 0, 1, 2, 3, 0, 1]),\n  'last_calls_device': array([0, 6, 1, 2, 6, 5, 4, 0, 1, 1])},\n 1.269126312377029,\n True,\n {})"
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "action = algorithm.compute_single_action(test_architecture.reset())\n",
     "test_architecture.step(action)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1098\n",
+      "It's ok\n",
+      "494\n",
+      "dict_values([0.93855, 0.95776, 0.97, 0.5, 0.94, 0.9955, 0.975, 0.99375])\n"
+     ]
     }
+   ],
+   "source": [
+    "print(test_architecture.architecture.compute_total_latency())\n",
+    "test_architecture.architecture.greedy_algorithm()\n",
+    "print(test_architecture.architecture.compute_total_latency())\n",
+    "print(test_architecture.architecture.free_space().values())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_architecture.architecture.space_flag"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
