Struggling to combine offline - online training

--- a/StepByStep.ipynb
+++ b/StepByStep.ipynb
@@ -12965,13 +12965,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-06 18:41:59,288\tINFO worker.py:1553 -- Started a local Ray instance.\n"
+      "2023-06-06 18:41:59,288\tINFO worker.py:1553 -- Started a local Ray instance.\n",
+      "2023-06-06 18:42:09,840\tINFO trainable.py:172 -- Trainable.setup took 12.967 seconds. If your trainable is slow to initialize, consider setting reuse_actors=True to reduce actor creation overheads.\n",
+      "2023-06-06 18:42:09,842\tWARNING util.py:67 -- Install gputil for GPU system monitoring.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/rcalzada/ray_results/PPO_OfflineTest_2023-06-06_18-41-56xsqjsqrh/checkpoint_000000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-06 18:42:17,922\tWARNING util.py:67 -- Install gputil for GPU system monitoring.\n",
+      "2023-06-06 18:42:18,177\tINFO trainable.py:791 -- Restored on 138.4.11.227 from checkpoint: /home/rcalzada/ray_results/PPO_OfflineTest_2023-06-06_18-41-56xsqjsqrh/checkpoint_000000\n",
+      "2023-06-06 18:42:18,179\tINFO trainable.py:800 -- Current state after restoring: {'_iteration': 0, '_timesteps_total': None, '_time_total': 0.0, '_episodes_total': None}\n",
+      " 10%|███████████▍                                                                                                      | 1/10 [00:04<00:44,  4.91s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4995]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██████████████████████▊                                                                                           | 2/10 [00:10<00:41,  5.24s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4995, 0.517]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 30%|██████████████████████████████████▏                                                                               | 3/10 [00:15<00:35,  5.07s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4995, 0.517, 0.5105]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|█████████████████████████████████████████████▌                                                                    | 4/10 [00:19<00:29,  4.90s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4995, 0.517, 0.5105, 0.54725]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████████████████████████████████████████████████████████                                                         | 5/10 [00:24<00:24,  4.83s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4995, 0.517, 0.5105, 0.54725, 0.62375]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|████████████████████████████████████████████████████████████████████▍                                             | 6/10 [00:29<00:19,  4.80s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4995, 0.517, 0.5105, 0.54725, 0.62375, 0.71]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|███████████████████████████████████████████████████████████████████████████████▊                                  | 7/10 [00:33<00:14,  4.74s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4995, 0.517, 0.5105, 0.54725, 0.62375, 0.71, 0.7785]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|███████████████████████████████████████████████████████████████████████████████████████████▏                      | 8/10 [00:38<00:09,  4.71s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4995, 0.517, 0.5105, 0.54725, 0.62375, 0.71, 0.7785, 0.8355]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|██████████████████████████████████████████████████████████████████████████████████████████████████████▌           | 9/10 [00:44<00:04,  4.97s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4995, 0.517, 0.5105, 0.54725, 0.62375, 0.71, 0.7785, 0.8355, 0.88425]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 10/10 [00:49<00:00,  4.90s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4995, 0.517, 0.5105, 0.54725, 0.62375, 0.71, 0.7785, 0.8355, 0.88425, 0.92]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -13013,10 +13172,7 @@
     "    print(result)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
