--- a/TFM_Even_Newer_Approach.ipynb
+++ b/TFM_Even_Newer_Approach.ipynb
@@ -597,7 +597,7 @@
     "architecture = Architecture()\n",
     "\n",
     "def env_creator(env_config):\n",
-    "    return TimeLimit(EnvCompatibility(AcesStepArchitectureEnv(52)), max_episode_steps=10)\n",
+    "    return TimeLimit(EnvCompatibility(AcesStepArchitectureEnv(52)), max_episode_steps=10) # WHAT?! 52?!?!?!?!?!?!?!?!?!?!?!?!?!?!?!?!?!?!?!\n",
     "register_env(\"AcesStepArchitectureEnv\", env_creator)\n",
     "\n",
     "config = (\n",
