--- a/10stations_2_points.ipynb
+++ b/10stations_2_points.ipynb
@@ -482,8 +482,10 @@
     "                    latency += self.architecture.latencies[call][location]\n",
     "                    computed_latencies+=1\n",
     "            self.free_space[location] -= self.weight\n",
-    "            if self.free_space[location] <= self.max_free_space[location]*0.2:\n",
-    "                flag = True\n",
+    "\n",
+    "        for i in range(len(self.free_space)):\n",
+    "            if self.free_space[i] <= self.max_free_space[i]*0.2:\n",
+    "                alert = True\n",
     "\n",
     "        info = {'type': self.type}\n",
     "\n",
