--- a/10stations_2_points.ipynb
+++ b/10stations_2_points.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 339,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 340,
    "outputs": [],
    "source": [
     "class Architecture:\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 341,
    "outputs": [
     {
      "name": "stdout",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 342,
    "outputs": [],
    "source": [
     "class AcesStepArchitectureEnv(Env):\n",
@@ -481,7 +481,7 @@
     "                if call != -1:\n",
     "                    latency += self.architecture.latencies[call][location]\n",
     "                    computed_latencies+=1\n",
-    "            self.free_space[location] -= self.weight\n",
+    "            self.free_space[location] -= self.weight * 6\n",
     "\n",
     "        for i in range(len(self.free_space)):\n",
     "            if self.free_space[i] <= self.max_free_space[i]*0.2:\n",
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 343,
    "outputs": [],
    "source": [
     "ar = AcesStepArchitectureEnv(16)"
@@ -539,20 +539,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 344,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12\n"
-     ]
-    },
-    {
      "data": {
-      "text/plain": "({'quantity': 12,\n  'weight': array([0.001]),\n  'free_space': array([50.    , 49.9875,  1.9875,  2.    ,  2.    ,  1.9625,  1.975 ,\n          1.9875,  1.9875,  1.9875,  1.9875,  1.9875]),\n  'last_calls': array([-1, -1])},\n 0.29811320754716986,\n False,\n {'type': 0})"
+      "text/plain": "({'quantity': 12,\n  'weight': array([0.001]),\n  'free_space': array([49.85 , 49.925,  1.85 ,  2.   ,  1.85 ,  2.   ,  2.   ,  1.925,\n          2.   ,  2.   ,  1.775,  1.925]),\n  'last_calls': array([-1, -1])},\n 0.29811320754716986,\n False,\n {'type': 0})"
      },
-     "execution_count": 254,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,16 +1359,16 @@
     "config[\"model\"][\"fcnet_hiddens\"] =[64,64]\n",
     "\n",
     "\n",
-    "algorithm_first = config.build()\n",
+    "algorithm_10 = config.build()\n",
     "\n",
-    "result_first =[]\n",
+    "result_10 =[]\n",
     "\n",
     "for j in tqdm(range(50)):\n",
-    "    result_train = algorithm_first.train()[\"episode_reward_mean\"]\n",
-    "    result_first.append(result_train)\n",
+    "    result_train = algorithm_10.train()[\"episode_reward_mean\"]\n",
+    "    result_10.append(result_train)\n",
     "    # if (j%100 == 0):\n",
     "    print(result_train)\n",
-    "print(result_first)"
+    "print(result_10)"
    ],
    "metadata": {
     "collapsed": false
