--- a/UnifiedSolution_6_stations.ipynb
+++ b/UnifiedSolution_6_stations.ipynb
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "outputs": [],
    "source": [
     "# 6: [2,4,4,3]\n",
@@ -495,6 +495,7 @@
     "        reward = -1 if alert else 1 - (latency / (computed_latencies * 22+1))\n",
     "\n",
     "        done = False if self.type != 3 else True\n",
+    "        self.type = self.type + 1 if self.type != 3 else self.type\n",
     "        info = {'type': self.type}\n",
     "\n",
     "        return self.get_obs(self.type), reward, done, info\n",
@@ -523,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "ar = AcesStepArchitectureEnv(6)"
@@ -534,13 +535,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 82,
    "outputs": [
     {
      "data": {
       "text/plain": "{'weight': array([0.025]),\n 'free_space': array([50, 50,  2,  2,  2,  2,  2,  2]),\n 'last_calls': array([ 3, -1])}"
      },
-     "execution_count": 46,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,13 +555,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 86,
    "outputs": [
     {
      "data": {
-      "text/plain": "({'weight': array([0.025]),\n  'free_space': array([49.975, 49.975,  2.   ,  1.975,  2.   ,  1.975,  2.   ,  2.   ]),\n  'last_calls': array([ 3, -1])},\n 0.5842696629213483,\n False,\n {'type': 0})"
+      "text/plain": "({'weight': array([1.5]),\n  'free_space': array([50.   , 49.92 ,  0.336,  1.912,  0.446,  2.   , -1.   ,  1.95 ]),\n  'last_calls': array([-1, -1])},\n -1,\n True,\n {'type': 3})"
      },
-     "execution_count": 47,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,41 +575,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-06-22 17:05:00,211\tWARNING env.py:156 -- Your env doesn't have a .spec.max_episode_steps attribute. Your horizon will default to infinity, and your environment will not be reset.\n",
-      "2023-06-22 17:05:00,213\tWARNING env.py:166 -- Your env reset() method appears to take 'seed' or 'return_info' arguments. Note that these are not yet supported in RLlib. Seeding will take place using 'env.seed()' and the info dict will not be returned from reset.\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Traceback (most recent call last):\n  File \"/home/rcalzada/.local/lib/python3.10/site-packages/ray/rllib/utils/pre_checks/env.py\", line 181, in check_gym_environments\n    env.reset()\n  File \"/home/rcalzada/.local/lib/python3.10/site-packages/gymnasium/wrappers/compatibility.py\", line 96, in reset\n    return self.env.reset(), {}\n  File \"/tmp/ipykernel_3523207/2204541523.py\", line 117, in reset\n    return self.get_obs(self.type)\n  File \"/tmp/ipykernel_3523207/2204541523.py\", line 59, in get_obs\n    self.weight = self.architecture.weights[type] * self.multipliers[self.num_stations][type]\nKeyError: 8\n\nThe above exception was the direct cause of the following exception:\n\nTraceback (most recent call last):\n  File \"/home/rcalzada/.local/lib/python3.10/site-packages/ray/rllib/utils/pre_checks/env.py\", line 82, in check_env\n    check_gym_environments(env)\n  File \"/home/rcalzada/.local/lib/python3.10/site-packages/ray/rllib/utils/pre_checks/env.py\", line 183, in check_gym_environments\n    raise ValueError(\nValueError: Your gymnasium.Env's `reset()` method raised an Exception!\n\nThe above error has been found in your environment! We've added a module for checking your custom environments. It may cause your experiment to fail if your environment is not set up correctly. You can disable this behavior via calling `config.environment(disable_env_checking=True)`. You can run the environment checking module standalone by calling ray.rllib.utils.check_env([your env]).",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "File \u001B[0;32m~/.local/lib/python3.10/site-packages/ray/rllib/utils/pre_checks/env.py:181\u001B[0m, in \u001B[0;36mcheck_gym_environments\u001B[0;34m(env)\u001B[0m\n\u001B[1;32m    180\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m--> 181\u001B[0m     \u001B[43menv\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreset\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    182\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n",
-      "File \u001B[0;32m~/.local/lib/python3.10/site-packages/gymnasium/wrappers/compatibility.py:96\u001B[0m, in \u001B[0;36mEnvCompatibility.reset\u001B[0;34m(self, seed, options)\u001B[0m\n\u001B[1;32m     94\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mrender()\n\u001B[0;32m---> 96\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43menv\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreset\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m, {}\n",
-      "Cell \u001B[0;32mIn[27], line 117\u001B[0m, in \u001B[0;36mAcesStepArchitectureEnv.reset\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    116\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mflag\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m\n\u001B[0;32m--> 117\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_obs\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtype\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn[27], line 59\u001B[0m, in \u001B[0;36mAcesStepArchitectureEnv.get_obs\u001B[0;34m(self, type)\u001B[0m\n\u001B[1;32m     58\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mget_obs\u001B[39m(\u001B[38;5;28mself\u001B[39m, \u001B[38;5;28mtype\u001B[39m):\n\u001B[0;32m---> 59\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mweight \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39marchitecture\u001B[38;5;241m.\u001B[39mweights[\u001B[38;5;28mtype\u001B[39m] \u001B[38;5;241m*\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmultipliers\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mnum_stations\u001B[49m\u001B[43m]\u001B[49m[\u001B[38;5;28mtype\u001B[39m]\n\u001B[1;32m     60\u001B[0m     indices \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mset\u001B[39m()\n",
-      "\u001B[0;31mKeyError\u001B[0m: 8",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "File \u001B[0;32m~/.local/lib/python3.10/site-packages/ray/rllib/utils/pre_checks/env.py:82\u001B[0m, in \u001B[0;36mcheck_env\u001B[0;34m(env)\u001B[0m\n\u001B[1;32m     81\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(env, gym\u001B[38;5;241m.\u001B[39mEnv) \u001B[38;5;129;01mor\u001B[39;00m old_gym \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(env, old_gym\u001B[38;5;241m.\u001B[39mEnv):\n\u001B[0;32m---> 82\u001B[0m     \u001B[43mcheck_gym_environments\u001B[49m\u001B[43m(\u001B[49m\u001B[43menv\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     83\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(env, BaseEnv):\n",
-      "File \u001B[0;32m~/.local/lib/python3.10/site-packages/ray/rllib/utils/pre_checks/env.py:183\u001B[0m, in \u001B[0;36mcheck_gym_environments\u001B[0;34m(env)\u001B[0m\n\u001B[1;32m    182\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[0;32m--> 183\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[1;32m    184\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mYour gymnasium.Env\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124ms `reset()` method raised an Exception!\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    185\u001B[0m     ) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01me\u001B[39;00m\n\u001B[1;32m    187\u001B[0m \u001B[38;5;66;03m# No more gym < 0.26 support! Error and explain the user how to upgrade to\u001B[39;00m\n\u001B[1;32m    188\u001B[0m \u001B[38;5;66;03m# gymnasium.\u001B[39;00m\n",
-      "\u001B[0;31mValueError\u001B[0m: Your gymnasium.Env's `reset()` method raised an Exception!",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[28], line 6\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mgymnasium\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mwrappers\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m EnvCompatibility\n\u001B[1;32m      5\u001B[0m simulated_aces \u001B[38;5;241m=\u001B[39m AcesStepArchitectureEnv(\u001B[38;5;241m8\u001B[39m)\n\u001B[0;32m----> 6\u001B[0m \u001B[43mcheck_env\u001B[49m\u001B[43m(\u001B[49m\u001B[43mEnvCompatibility\u001B[49m\u001B[43m(\u001B[49m\u001B[43msimulated_aces\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/.local/lib/python3.10/site-packages/ray/rllib/utils/pre_checks/env.py:93\u001B[0m, in \u001B[0;36mcheck_env\u001B[0;34m(env)\u001B[0m\n\u001B[1;32m     91\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m:\n\u001B[1;32m     92\u001B[0m     actual_error \u001B[38;5;241m=\u001B[39m traceback\u001B[38;5;241m.\u001B[39mformat_exc()\n\u001B[0;32m---> 93\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[1;32m     94\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mactual_error\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     95\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mThe above error has been found in your environment! \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     96\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mWe\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mve added a module for checking your custom environments. It \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     97\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mmay cause your experiment to fail if your environment is not set up \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     98\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcorrectly. You can disable this behavior via calling `config.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     99\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124menvironment(disable_env_checking=True)`. You can run the \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    100\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124menvironment checking module standalone by calling \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    101\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mray.rllib.utils.check_env([your env]).\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    102\u001B[0m     )\n",
-      "\u001B[0;31mValueError\u001B[0m: Traceback (most recent call last):\n  File \"/home/rcalzada/.local/lib/python3.10/site-packages/ray/rllib/utils/pre_checks/env.py\", line 181, in check_gym_environments\n    env.reset()\n  File \"/home/rcalzada/.local/lib/python3.10/site-packages/gymnasium/wrappers/compatibility.py\", line 96, in reset\n    return self.env.reset(), {}\n  File \"/tmp/ipykernel_3523207/2204541523.py\", line 117, in reset\n    return self.get_obs(self.type)\n  File \"/tmp/ipykernel_3523207/2204541523.py\", line 59, in get_obs\n    self.weight = self.architecture.weights[type] * self.multipliers[self.num_stations][type]\nKeyError: 8\n\nThe above exception was the direct cause of the following exception:\n\nTraceback (most recent call last):\n  File \"/home/rcalzada/.local/lib/python3.10/site-packages/ray/rllib/utils/pre_checks/env.py\", line 82, in check_env\n    check_gym_environments(env)\n  File \"/home/rcalzada/.local/lib/python3.10/site-packages/ray/rllib/utils/pre_checks/env.py\", line 183, in check_gym_environments\n    raise ValueError(\nValueError: Your gymnasium.Env's `reset()` method raised an Exception!\n\nThe above error has been found in your environment! We've added a module for checking your custom environments. It may cause your experiment to fail if your environment is not set up correctly. You can disable this behavior via calling `config.environment(disable_env_checking=True)`. You can run the environment checking module standalone by calling ray.rllib.utils.check_env([your env])."
-     ]
-    }
-   ],
+   "execution_count": 87,
+   "outputs": [],
    "source": [
     "ar.step(ar.action_space.sample())\n",
     "from ray.rllib.utils import check_env\n",
